deployments/kustomize/oathkeeper/overlays/minikube/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oathkeeper-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: oathkeeper
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
